# planingfsi

./: .coveragerc  .flake8  .gitignore  .kcoderc.swp  .pre-commit-config.yaml  LICENSE  README  README.md  bashrc  bitbucket-pipelines.yml  codecov.yml  mypy.ini  pyproject.toml  readthedocs.yml  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish.yml  python-package.yml  test.yml
demos/flexibleMembrane/inputDict/: membraneDict
demos/steppedPlaningPlate/: configDict
demos/twoPlaningPlate/: meshDict
doc/: Makefile  make.bat
doc/source/: conf.py  conf.py.bak  index.rst
doc/source/api/: modules.rst  planingfsi.fe.rst  planingfsi.fsi.rst  planingfsi.potentialflow.rst  planingfsi.rst
docs/: Makefile  make.bat  requirements.txt
docs/source/: api.rst  conf.py  index.rst  meshing.md
docs/source/api/: modules.rst  planingfsi.fsi.rst  planingfsi.potentialflow.rst
etc/: bashrc  install  matplotlibrc
lib/: FSIIterator.py  kConfig.py  planingMeshGen.py  pofPost.py  potentialPlaningLib.py  pressureElements.py  rigidBodyFEM.py
lib/finiteelement/: FEMLib.py  FEMesh.py  __init__.py  rigidBodyFEM.py
lib/fsi/: FSIFigure.py  FSIInterpolator.py  FSIIterator.py  __init__.py
lib/general/: __init__.py  config.py  kConfig.py  krampy.py
lib/potentialflow/: PotentialPlaningCalculation.py  PressureElement.py  PressurePatch.py
planingfsi/: __init__.py  __version__.py  cli.py  config.py  defaultConfigDict  defaultDict  dictionary.py  felib.py  femesh.py  fsifigure.py  fsiinterpolator.py  fsiiterator.py  general.py  io_old.py  krampy.py  krampy.py.bak  krampy_old.py  potentialplaningcalculation.py  pressureelement.py  pressurepatch.py  rigidbody.py  solver.py  trig.py  unit.py
planingfsi/command_line/: mesh.py  planingfsi.py
planingfsi/config/: __init__.py  config.py  config.py.bak  defaultDict
planingfsi/fe/: felib.py  felib.py.bak  femesh.py  femesh.py.bak  rigidbody.py  structure.py  structure.py.bak
planingfsi/finiteelement/: FEMLib.py  RigidBodyFEM.py  __init__.py
planingfsi/fsi/: figure.py  fsifigure.py  fsifigure.py.bak  fsiinterpolator.py  fsiiterator.py  fsisimulation.py  fsisimulation.py.bak  interpolator.py  simulation.py
planingfsi/general/: __init__.py  config.py  unit.py
planingfsi/io/: dictionary.py
planingfsi/potentialflow/: PotentialPlaningCalculation.py  __init__.py  calculation.py  pressureelement.py  pressurepatch.py  pressurepatch.py.bak  solver.py  solver.py.bak
samplerc/: bashrc  vimrc
src/krampy/: __init__.py  general.py  io_old.py  iterator.py  krampy_old.py  solver.py  stopwatch.py  trig.py  unit.py  unit_old.py
src/krampy/iotools/: IOTools.py  InputSheet.py  __init__.py  dictionary.py
src/planingfsi/: __init__.py  __main__.py  __version__.py  cli.py  config.py  dictionary.py  figure.py  general.py  krampy_old.py  math_helpers.py  simulation.py  solver.py  trig.py  unit.py  util.py  writers.py
src/planingfsi/fe/: felib.py  femesh.py  rigid_body.py  structure.py  substructure.py
src/planingfsi/fsi/: figure.py  interpolator.py  simulation.py
src/planingfsi/potentialflow/: pressureelement.py  pressurepatch.py  solver.py
tests/: conftest.py  context.py  testDict  testDictBase  test_cli.py  test_config.py  test_dictionary.py  test_felib.py  test_mesh.py  test_potentialflow.py  test_pressurepatch.py  test_rigid_body.py  test_simulation.py  test_structural_solver.py  test_validation_cases.py
tests/config/: test_config.py.bak
tests/input_files/: testDict
tests/validation/flat_plate/mesh/: fixedDOF.txt
tests/validation_cases/flat_plate/: configDict  meshDict
tests/validation_cases/flat_plate/0.validated/: coords_plate.txt  forces_plate.txt  forces_total.txt  freeSurface.txt  motion_default.txt  overallQuantities.txt  pressureAndShear.txt
tests/validation_cases/flat_plate/inputDict/: plateDict
tests/validation_cases/flat_plate/mesh/: elements_plate.txt  fixedLoad.txt  (+1 more)
tests/validation_cases/flexible_membrane/: configDict  meshDict
tests/validation_cases/sprung_plate/: configDict
tests/validation_cases/stepped_planing_plate/: configDict  meshDict
tutorials/: filled_dam.py  flat_plate_via_library.py  simple_ses_via_library.py
tutorials/demos/flexibleMembrane/: configDict  meshDict  run
tutorials/demos/steppedPlaningPlate/: meshDict
tutorials/disp15.0_Pc0.35_sternFlex/: configDict  meshDict  rigidPartsDict  wetdeckDict
tutorials/disp15.0_Pc0.35_sternFlex/inputDict/: bowSealLowerDict  sternSealLowerDict
tutorials/disp15.0_Pc0.35_sternFlex/pressureCushion/: pressureCushionDict
tutorials/flexibleMembrane/: configDict
tutorials/flexibleMembrane/inputDict/: membraneDict
tutorials/pyscript/filled_dam/: index.html  run_dam.py
tutorials/steppedPlaningPlate/: configDict  meshDict
tutorials/steppedPlaningPlate/inputDict/: aftPlateDict  fwdPlateDict
tutorials/twoPlaningPlate/: meshDict
tutorials/twoPlaningPlate/inputDict/: aftPlateDict  fwdPlateDict
(+52 files in other folders)
